# taipan

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP_AI_ECOSYSTEM_PERF.md  pyproject.toml
benchmarks/: jit_bench.py  suite.py
docs/: README.md
examples/: ai_demo.tp  classes.tp  concurrency.tp  fibonacci.tp  full_demo.tp  hello_world.tp  stdlib_tests.tp
src/taipan/: __init__.py  __main__.py  benchmark.py  cli.py  doc_generator.py
src/taipan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/taipan/compiler/: __init__.py
src/taipan/compiler/ast/: __init__.py  nodes.py
src/taipan/compiler/backend/: __init__.py  interpreter.py
src/taipan/compiler/c_transpiler/: __init__.py  taipan_runtime.h  transpiler.py
src/taipan/compiler/jit/: __init__.py  compiler.py
src/taipan/compiler/lexer/: __init__.py  lexer.py  tokens.py
src/taipan/compiler/parser/: __init__.py  parser.py
src/taipan/lsp/: __init__.py  server.py
src/taipan/package_manager/: __init__.py  tpkg.py
src/taipan/runtime/: __init__.py  ai_errors.py  environment.py  errors.py  pretty_errors.py  taipan_types.py
src/taipan/stdlib/: __init__.py  ai_module.py  collections_module.py  file_module.py  json_module.py  math_module.py  network_module.py  string_module.py  time_module.py
tests/: __init__.py  test_ai_features.py  test_c_transpiler.py  test_interpreter.py  test_lexer.py  test_type_checker.py  test_vm_optimizer.py
vscode_extension/: extension.js  language-configuration.json  npm-package.json  package.json
vscode_extension/syntaxes/: taipan.tmLanguage.json
(+8 files in other folders)
