[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taipan"
version = "1.0.0"
description = "A fast, AI-native programming language with bytecode VM and AOT C compilation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Operating System :: OS Independent",
]
keywords = ["programming language", "interpreter", "compiler", "AI", "Taipan"]

[project.scripts]
tai = "taipan.cli:main"
tpkg = "taipan.package_manager.tpkg:main"
taipan-lsp = "taipan.lsp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.setuptools.package-data]
taipan = ["compiler/c_transpiler/*.h"]
